--- a/VRChat/28/1385528.html
+++ b/VRChat/28/1385528.html
@@ -77,10 +77,10 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand="poiure"
-        data-product-category="78" data-product-id="1385528"
-        data-product-list="market_show" data-product-price="2600"
-        data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="poiure" data-product-category="78"
+        data-product-id="1385528" data-product-list="market_show"
+        data-product-price="2600" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -103,17 +103,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +124,13 @@
                             <img alt="Production ℵː9" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/449075/icon_image/661df87d-7f88-47a1-a9f8-8a67b82b410e_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               Production ℵː9
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           PA9 T-Shirt A
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -434,18 +434,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1385528"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "PA9 T-Shirt A | Production ℵː9"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1385528"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "PA9 T-Shirt A | Production ℵː9"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1385528"
@@ -455,7 +454,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -540,8 +539,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             How to buy for people living abroad☟
                             https://www.tenso.com/en/static/lp_shop_booth
                             この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。
@@ -549,7 +548,8 @@
                           <div class="factory-description">
                             <div class="item-detail">
                               <p>
-                                <span class="autolink"><br>
+                                <span class=
+                                "autolink u-text-wrap"><br>
                                 詳細なイメージは<a target="_blank" href=
                                 "https://factory.pixiv.net/booth/products/white_tshirt">こちら</a>をご覧ください。</span>
                               </p>
@@ -641,17 +641,19 @@
                                 </tr>
                               </table>
                               <p>
-                                <span class="autolink">素材：綿100％<br>
+                                <span class=
+                                "autolink u-text-wrap">素材：綿100％<br>
                                 印刷方式：ダイレクトインクジェット方式<br>
                                 生地の重さ：190g/m<sup>2</sup>(5.6oz)<br>
                                 糸の太さ：17/-<br>
                                 織り：天竺<br>
                                 カラー：白</span>
                               </p><span class=
-                              "autolink"><small>※捺染顔料インクでウェアに直接プリントしますので、布にインクが染み込み通気性がよく自然な風合いが特徴です。</small></span>
+                              "autolink u-text-wrap"><small>※捺染顔料インクでウェアに直接プリントしますので、布にインクが染み込み通気性がよく自然な風合いが特徴です。</small></span>
                             </div>
                             <h4>
-                              <span class="autolink">発送予定日</span>
+                              <span class=
+                              "autolink u-text-wrap">発送予定日</span>
                             </h4>
                             <div class="item-detail">
                               <table class="condensed">
@@ -665,15 +667,14 @@
                                   <td class="is-right"></td>
                                 </tr>
                               </table><span class=
-                              "autolink"><small class=
+                              "autolink u-text-wrap"><small class=
                               "memo">※お振込を確認してから製造を開始するため、銀行・コンビニ決済でお支払いの際は記載されている発送予定日より遅くなる場合があります。</small></span>
                             </div>
                           </div>
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
