--- a/VRChat/56/1384756.html
+++ b/VRChat/56/1384756.html
@@ -78,9 +78,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "diglaworks" data-product-category="134" data-product-id=
-        "1384756" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="diglaworks" data-product-category="134"
+        data-product-id="1384756" data-product-list="market_show"
         data-product-price="100" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -105,17 +105,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -126,13 +126,13 @@
                             <img alt="DiglaWorks STORE" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/65974/icon_image/9374398d-ba30-4a22-a811-8e9e0c4d2472_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               DiglaWorks STORE
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           でぃぐらてぃーむ式お茶碗/ご飯付きお茶碗
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -272,18 +272,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1384756"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "でぃぐらてぃーむ式お茶碗/ご飯付きお茶碗 | DiglaWorks STORE"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1384756"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "でぃぐらてぃーむ式お茶碗/ご飯付きお茶碗 | DiglaWorks STORE"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1384756"
@@ -293,7 +292,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -326,8 +325,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             練習で作ったお茶碗のFBXです。おまけでご飯が盛られたデータも同梱しています。
                             ポリゴン数少なめに作ったので、Quest版VRCにも持ち込めるかも？ 【規約】
                             ・改変→可（むしろ推奨） ・再配布→不可（改変した場合でも不可）
@@ -340,8 +339,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
